syntax = "proto3";
package UserManagement;

import "Users/User.proto";

message UserStore
{
    map<string, User> Users = 1;

    repeated string BannedUsers = 2;
}